tests/ui/feature-gates/feature-gate-cfg-unstable-target-modifier.stderr
error[E0658]: `cfg(target_modifier_fixed_x18)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-unstable-target-modifier.rs:3:7
   |
LL | #[cfg(target_modifier_fixed_x18)]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(cfg_unstable_target_modifier)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
